5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4162/executions/1865_1534.log
== TEST (2019-07-04 10:29:12) 
-- CODE:
nr=float(input("insira um numero real: "))
ni=int(input("insira a quantidade de termos:"))
i=1
c=0
f=(nr**i)/i
while c<ni:
	f=f+f
	i=i+2
	c=c+1
	print(f)
-- OUTPUT:
1.78
3.56
7.12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:29:36) 
-- CODE:
nr=float(input("insira um numero real: "))
ni=int(input("insira a quantidade de termos:"))
i=1
c=0
f=(nr**i)/i
while c<ni:
	f=f+f
	i=i+2
	c=c+1
	print(f)
-- OUTPUT:
1.78
3.56
7.12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:30:39) 
-- CODE:
nr=float(input("insira um numero real: "))
ni=int(input("insira a quantidade de termos:"))
i=1
c=0
s=0
f=(nr**i)/i
while c<ni:
	s=s+f
	i=i+2
	c=c+1
	print(s)
-- OUTPUT:
0.89
1.78
2.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:30:44) 
-- CODE:
nr=float(input("insira um numero real: "))
ni=int(input("insira a quantidade de termos:"))
i=1
c=0
s=0
f=(nr**i)/i
while c<ni:
	s=s+f
	i=i+2
	c=c+1
	print(s)
-- OUTPUT:
0.89
1.78
2.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:30:50) 
-- CODE:
nr=float(input("insira um numero real: "))
ni=int(input("insira a quantidade de termos:"))
i=1
c=0
s=0
f=(nr**i)/i
while c<ni:
	s=s+f
	i=i+2
	c=c+1
	print(s)
-- OUTPUT:
0.89
1.78
2.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:31:27) 
-- CODE:
nr=float(input("insira um numero real: "))
ni=int(input("insira a quantidade de termos:"))
i=1
c=0
s=0
while c<ni:
	f=(nr**i)/i
	s=s+f
	i=i+2
	c=c+1
	print(s)
-- OUTPUT:
0.89
1.1249896666666668
1.2366708556466668
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:31:31) 
-- CODE:
nr=float(input("insira um numero real: "))
ni=int(input("insira a quantidade de termos:"))
i=1
c=0
s=0
while c<ni:
	f=(nr**i)/i
	s=s+f
	i=i+2
	c=c+1
	print(s)
-- OUTPUT:
0.89
1.1249896666666668
1.2366708556466668
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:31:45) 
-- CODE:
nr=float(input("insira um numero real: "))
ni=int(input("insira a quantidade de termos:"))
i=1
c=0
s=0
while c<ni:
	f=(nr**i)/i
	s=s+f
	i=i+2
	c=c+1
print(round(s,7)
-- ERROR:
File "XXXX", line 12
    
                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:31:48) 
-- CODE:
nr=float(input("insira um numero real: "))
ni=int(input("insira a quantidade de termos:"))
i=1
c=0
s=0
while c<ni:
	f=(nr**i)/i
	s=s+f
	i=i+2
	c=c+1
print(round(s,7))
-- OUTPUT:
1.2366709
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-04 10:32:00) 
-- CODE:
nr=float(input("insira um numero real: "))
ni=int(input("insira a quantidade de termos:"))
i=1
c=0
s=0
while c<ni:
	f=(nr**i)/i
	s=s+f
	i=i+2
	c=c+1
print(round(s,7))
-- EXECUTION TIME:
0.75811
-- TEST CASE 1:
---- input:
0.89
3
---- correct output:
1.2366709
---- user output:
1.2366709
-- TEST CASE 2:
---- input:
0.25
6
---- correct output:
0.2554128
---- user output:
0.2554128
-- TEST CASE 3:
---- input:
0.2635
4
---- correct output:
0.2698651
---- user output:
0.2698651
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
